# MyTinyCompiler

./: .gitignore  CMakeLists.txt  Form1(1).cs  README.md  ast_tree.html  compiler.spec  convert_ast.py  icon.py  main.py  main_ui.py  outputAST.txt  outputTAC.txt
absolute/path/to/: file
src/AST/: AST.cpp  AST.hpp  bindings.cpp
src/TAC/: TAC.cpp  TAC.hpp  bindings.cpp
src/lexical/: bindings.cpp  lexical.cpp  lexical.hpp
src/syntactic/: bindings.cpp  syntactic.cpp  syntactic.hpp
